blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bluegreen-test
      color: blue
  template:
    metadata:
      labels:
        app: bluegreen-test
        color: blue
    spec: 
      containers:
      - name: nginx
        image: linuxacademycontent/ckad-nginx:blue
        ports: 
        - containerPort: 80
