canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-deployment
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: canary-test
      environment: canary
  template:
    metadata:
      labels:
        app: canary-test
        environment: canary
    spec:
      containers: 
      - name: nginx
        image: linuxacademycontent/ckad-nginx:canary
        ports: 
        - containerPort: 80
