client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  namespace: np-test-b
  labels:
    app: np-test-client
spec:
  containers:
    - name: busybox
      image: radial/busyboxplus:curl
      # command: ['sh', '-c', 'while true; do curl -m 2 <server Pod IP address>; sleep 5; done']
      command: ["sh", "-c", "while true; do curl -m 2 10.1.6.114; sleep 5; done"]
      # replace <server Pod IP address> with Server Pod IP address which is 10.1.6.114
