green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bluegreen-test
      color: green
  template:
    metadata:
      labels:
        app: bluegreen-test
        color: green
    spec: 
      containers:
      - name: nginx
        image: linuxacademycontent/ckad-nginx:green
        ports: 
        - containerPort: 80
