liveness-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-pod
spec: 
  containers:
  - name: busybox
    image: busybox:stable
    command: ['sh', '-c', 'while true; do sleep 10; done']
    livenessProbe:
      exec: 
        command: ['echo', 'health check!']
      initialDelaySeconds: 5
      periodSeconds: 5
