my-secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-secret-pod
spec:
  restartPolicy: Never
  containers:
    - name: busybox
      image: busybox:stable
      command: ["sh", "-c", "echo $SENSITIVE_STUFF; cat /config/passwords.txt"]
      volumeMounts:
        - name: secret-config
          mountPath: /config
          readOnly: true
  volumes:
    - name: secret-config
      secret:
        secretName: my-secret
        items:
          - key: passwords.txt
            path: passwords.txt
