resources-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: resources-pod
  namespace: resources-test
spec:
  containers:
    - name: busybox
      image: busybox:stable
      command: ["sh", "-c", "while true; do echo Running...; sleep 5; done"]
      resources:
        requests:
          memory: 64Mi
          cpu: 250m # 250 milli-CPU. A milli-CPU is 1/1000 of a CPU core. 250m = 1/4 of a single CPU core.
        limits:
          memory: 128Mi
          cpu: 500m
# /************************************************************************************************************************
# the resources does not mean that the pod will use 64Mi memory or 250m cpu, it just provides Kubernetes with kind of our
# approximation of how much we intend it to use, and Kubernetes can use that information to select a node to run this Pod
# that actually has enough resources available.
# ************************************************************************************************************************/
