too-many-resources-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: too-many-resources-pod
  namespace: resources-test
spec:
  containers:
    - name: busybox
      image: busybox:stable
      command: ["sh", "-c", "while true; do echo Running...; sleep 5; done"]
      resources:
        requests:
          memory: 64Mi
          cpu: 250m
        limits:
          memory: 200Mi
          cpu: 500m
