nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  type: NodePort
  selector:
    app: service-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30080
# /******************************************************************************************************************************
# 1. In a lot of situations, line 13 can be omitted, and a NodePort will be automatically assigned. Because I am using the cloud
#    server here, so I need to specific the nodePort as the nodePort: 30080 will open externally through our firewall in the
#    Cloud Playground platform.
# ******************************************************************************************************************************/


10.107.218.210
